--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+
+@theme{
+    --color-primary:#D1F8EF;
+    --color-secoundary:#A1E3F9;
+    --color-accent:#3674B5;
+
+
+}
